--- a/src/app/modules/generalreport/excel-data-management/excel-data-management.component.html
+++ b/src/app/modules/generalreport/excel-data-management/excel-data-management.component.html
@@ -1,84 +1,46 @@
-<mat-card>
-    <mat-card-title>Excel Data Upload</mat-card-title>
-    <mat-card-subtitle></mat-card-subtitle>
-    <mat-card-content>
-        <div class="container">
-            <form [formGroup]="uploadForm">
-                <div class="row">
-                    <input [hidden]="true" #inputfile type="file" class="form-control" (change)="browseOnChange($event)"
-                        placeholder="Upload file" accept=".xlsx">
-                </div>
-                <span fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
-                    <span>{{selectedFile}}</span>
-                    <button [disabled]="loading" class="mat-raised-button" matTooltip="select file" color="primary"
-                        (click)="inputfile.click()">
-                        <mat-icon aria-label="photo">attach_file</mat-icon>
-                    </button>
-                    <!-- <mat-form-field appearance="outline">
-                        <mat-label>Batch</mat-label>
-                        <mat-select formControlName="BatchId" #Class>
-                            <mat-option value="0">---</mat-option>
-                            <mat-option *ngFor="let p of Batches" [value]="p.MasterDataId">
-                                {{p.MasterDataName}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field> -->
-                    <mat-form-field appearance="outline">
-                        <mat-label>Upload For</mat-label>
-                        <mat-select formControlName="UploadTypeId" (selectionChange)="onselectchange($event)">
-                            <mat-option value="0">---</mat-option>
-                            <mat-option *ngFor="let p of UploadTypes" [value]="p.MasterDataId">
-                                {{p.MasterDataName}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                    
-                    <button [disabled]="loading" type="submit" (click)="readAsJson()" matTooltip="upload file" class="mat-raised-button">
-                        <mat-icon aria-label="file_upload">file_upload</mat-icon>
-                    </button>&nbsp;&nbsp;
-                </span>
-                <mat-divider></mat-divider>
-                <span style="color:red" [innerHTML]="ErrorMessage">
-                </span>
-                <div *ngFor="let item of jsonData" fxLayout="row" fxLayoutAlign="space-between center">
-                    <div>{{item.Name}}</div>
-                    <div>{{item.FatherName}}</div>
-                    <div>{{item.FatherOccupation}}</div>
-                    <div>{{item.MotherName}}</div>
-                    <div>{{item.MotherOccupation}}</div>
-                    <div>{{item.Gender}}</div>
-                    <div>{{item.PresentAddress}}</div>
-                    <div>{{item.PermanentAddress}}</div>
-                    <div>{{item.DOB}}</div>
-                    <div>{{item.Bloodgroup}}</div>
-                </div>
-                <!-- <div class="row">
-                <div class="col-md-2 form-group">
-                    <button [disabled]="loading" type="button" class="btn btn-info" (click)="readAsCSV()">Read as CSV</button>
-                </div>
-                <div class="col-md-2 form-group">
-                    <button [disabled]="loading" type="button" class="btn btn-info" (click)="readAsJson()">Read as JSON</button>
-                </div>
-                <div class="col-md-2 form-group">
-                    <button [disabled]="loading" type="button" class="btn btn-info" (click)="readAsHTML()">Read as HTML</button>
-                </div>
-                <div class="col-md-2 form-group">
-                    <button [disabled]="loading" type="button" class="btn btn-info" (click)="readAsText()">Read as Text</button>
-                </div>
-            </div> -->
-            </form>
-        </div>
-        <!-- <mat-table #table [dataSource]="dataSource" class="mat-elevation-z8">
+<div style="padding: 15px;">
+    <strong>Upload Data</strong>
+</div>
+<form [formGroup]="uploadForm">
+    <div class="row">
+        <input [hidden]="true" #inputfile type="file" class="form-control" (change)="browseOnChange($event)"
+            placeholder="Upload file" accept=".xlsx">
+    </div>
+    <span fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
+        <span>{{selectedFile}}</span>
+        <button [disabled]="loading" class="mat-raised-button" matTooltip="select file" color="primary"
+            (click)="inputfile.click()">
+            <mat-icon aria-label="photo">attach_file</mat-icon>
+        </button>
+        <mat-form-field appearance="outline">
+            <mat-label>Upload For</mat-label>
+            <mat-select formControlName="UploadTypeId" (selectionChange)="onselectchange($event)">
+                <mat-option value="0">---</mat-option>
+                <mat-option *ngFor="let p of UploadTypes" [value]="p.MasterDataId">
+                    {{p.MasterDataName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
 
-            <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
-                <mat-header-cell *matHeaderCellDef>{{disCol}}</mat-header-cell>
-                <mat-cell *matCellDef="let element "> {{element.disCol}}
-                </mat-cell>
-            </ng-container>
-    
-            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-        </mat-table> -->
+        <button [disabled]="loading" type="submit" (click)="readAsJson()" matTooltip="upload file"
+            class="mat-raised-button">
+            <mat-icon aria-label="file_upload">file_upload</mat-icon>
+        </button>&nbsp;&nbsp;
+    </span>
+    <mat-divider></mat-divider>
+    <span style="color:red" [innerHTML]="ErrorMessage">
+    </span>
+    <div *ngFor="let item of jsonData" fxLayout="row" fxLayoutAlign="space-between center">
+        <div>{{item.Name}}</div>
+        <div>{{item.FatherName}}</div>
+        <div>{{item.FatherOccupation}}</div>
+        <div>{{item.MotherName}}</div>
+        <div>{{item.MotherOccupation}}</div>
+        <div>{{item.Gender}}</div>
+        <div>{{item.PresentAddress}}</div>
+        <div>{{item.PermanentAddress}}</div>
+        <div>{{item.DOB}}</div>
+        <div>{{item.Bloodgroup}}</div>
+    </div>
 
-    </mat-card-content>
-</mat-card>
+</form>
