--- a/src/app/modules/schoolreports/reportboard/reportboard.component.html
+++ b/src/app/modules/schoolreports/reportboard/reportboard.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title>Reports</mat-card-title>
+    <mat-card-title>Report</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
         <div style="margin:5px">
