--- a/src/app/modules/control/batchdashboard/batchdashboard.component.html
+++ b/src/app/modules/control/batchdashboard/batchdashboard.component.html
@@ -54,19 +54,19 @@
     <ng-container matColumnDef="Active">
         <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
         <mat-cell *matCellDef="let element">
-            <mat-checkbox (click)="$event.stopPropagation()" (change)="updateActive(element,$event)"
+            <mat-checkbox (click)="$event.stopPropagation()" [disabled]="Permission=='read'" (change)="updateActive(element,$event)"
                 [checked]="element.Active==1?true:false">
             </mat-checkbox>
         </mat-cell>
     </ng-container>
     <ng-container matColumnDef="Action">
         <mat-header-cell *matHeaderCellDef>
-            <button [disabled]="loading" matTooltip="add" mat-mini-fab (click)="addnew()">
+            <button [disabled]="loading || Permission=='read'" matTooltip="add" mat-mini-fab (click)="addnew()">
                 <mat-icon>add</mat-icon>
             </button>
         </mat-header-cell>
         <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-            <button [disabled]="loading || !element.Action" matTooltip="view/edit" mat-mini-fab
+            <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="view/edit" mat-mini-fab
                 (click)="UpdateOrSave(element)">
                 <mat-icon>save</mat-icon>
             </button>
