--- a/src/app/modules/control/settingboard/settingboard.component.html
+++ b/src/app/modules/control/settingboard/settingboard.component.html
@@ -1,8 +1,24 @@
+
 <mat-card>
     <mat-card-title>Initial Settings</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content style="margin:5px;max-height: inherit;">
-            <!-- <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayout.xs="column" fxLayoutGap="30px"> -->
+        <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
+            <mat-tab *ngFor="let component of components;let indx=index">
+                <ng-template mat-tab-label>
+                    <mat-icon>{{tabNames[indx].faIcon}}</mat-icon>{{tabNames[indx].label}}
+                </ng-template>
+                <ng-template matTabContent>
+                    <div #container></div>
+                </ng-template>
+            </mat-tab>
+        </mat-tab-group>
+    </mat-card-content>
+</mat-card>
+<!-- <mat-card>
+    <mat-card-title>Initial Settings</mat-card-title>
+    <mat-card-subtitle></mat-card-subtitle>
+    <mat-card-content style="margin:5px;max-height: inherit;">
                 <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChanged($event)" mat-stretch-tabs>
                     <mat-tab>
                         <ng-template mat-tab-label>
@@ -36,7 +52,6 @@
                         <app-RoleAppPermissiondashboard></app-RoleAppPermissiondashboard>
                     </mat-tab>                
                 </mat-tab-group>
-            <!-- </div> -->
        
     </mat-card-content>
-</mat-card>
+</mat-card> -->
