--- a/src/app/modules/control/users/appuserdashboard/appuserdashboard.component.html
+++ b/src/app/modules/control/users/appuserdashboard/appuserdashboard.component.html
@@ -89,7 +89,7 @@
                 <ng-container matColumnDef="Action">
                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                     <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                        <button [disabled]="loading" mat-mini-fab (click)="UpdateOrSave(element)">
+                        <button [disabled]="loading || Permission=='read'" mat-mini-fab (click)="UpdateOrSave(element)">
                             <mat-icon matTooltip="view">save</mat-icon>
                         </button>
                     </mat-cell>
